--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,9 +17,15 @@ hr {
     max-width: 450px;
     margin: 5vh auto;
     padding: 2rem;
-    background: #fff7ee;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    background: #e8e3dd;
+    border-radius: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    margin: 0;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.25);
 }
 
 
@@ -64,9 +70,15 @@ h2 { border-bottom: 2px solid #eee; padding-bottom: 0.5rem; margin-top: 0; }
 }
 
 .form-group label {
-    display: block;
+   display: block;
     margin-bottom: 0.5rem;
     font-weight: bold;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+
+    transform: translateX(-35px);
 }
 
 input[type="text"],
@@ -74,11 +86,13 @@ input[type="email"],
 input[type="password"],
 input[type="number"],
 select {
-    width: 100%;
-    padding: 0.75rem;
+   width: 80%;            
+    display: block;       
+    margin: 0 auto;        
+    padding:  0.65rem;     
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 
@@ -106,7 +120,6 @@ select {
 #book-form #cancel-edit-btn {
     margin-top: 0.5rem;
 }
-
 
 
 .btn {
@@ -159,7 +172,9 @@ select {
 
 
 form .btn {
-    width: 100%;
+    width: 60%;       
+    display: block;    
+    margin: 1rem auto;
 }
 
 
